apps/staging/story/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: story-staging
  namespace: nori-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: story-staging
  template:
    metadata:
      labels:
        app: story-staging
    spec:
      containers:
        - image: ghcr.io/nori-cloud/story:a4848f5
          name: story
          ports:
            - containerPort: 3000
